src/App.css
:root {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  --color-a: #0f222c;
  --color-b: #343149;
  --color-c: #5287a5;
  color: white;
  --shadow: 0px -8px 20px 5px var(--color-a);
  --blur: rgba(255, 255, 255, 0.2);
  --img-bg: url(https://images.unsplash.com/vector-1768339220688-79c4294122e7?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
}

body {
  margin: 0em 1em;
  background-color: var(--color-a);
  background-image: var(--img-bg);
  background-size: cover;
  background: linear-gradient(to bottom,
      #0f2027,
      #203a43,
      #2c5364);
  /* filter: blur(10px); */
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
}

h2 {
  border-top: 5px solid var(--color-a);
}

.icon-s {
  font-size: 1.5em;
}

.icon-l {
  font-size: 2.5em;
}

ul {
  list-style: none;
}

button {
  border: none;
  font-size: 2em;
}

.transition-move {
  transition: transform 0.5s ease;
}

.transition-size {
  transition: max-width 0.6s ease;
  transition: width 0.6s ease;
}

.text-about {
  max-width: 30rem;
}

.btn {
  background: white;
  border-radius: 0.2em;
  padding: 0.25em 1em;
}

.section {
  /* margin: 4em 0em; */
  /* padding: 0.5em; */
  /* background-color: var(--color-a); */
  /* box-shadow: 0px -8px 20px 5px var(--color-a); */
}

.container-btn {
  display: flex;
  max-width: 100%;
  flex-direction: column;
  gap: 4em;
}

.content-about {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* width: 80%; */
  /* width: 30em; */
  max-width: 25em;
  margin: 0 auto;
  background-color: var(--color-a);
  padding: 2em;
  border-radius: 2em;
  box-shadow: var(--shadow);
}

.content-about,
h2,
h3 {
  margin: 0 auto;
}

.container-footer {
  /* margin-top: 2em; */
  /* border-radius: 30px; */
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  /* background-color: var(--color-b); */
  padding: 0.4em;
  padding-right: 2.5em;
  border-top: 5px solid var(--color-b);
  background: rgba(255, 255, 255, 0.05);
  backdrop-filter: blur(15px);
  -webkit-backdrop-filter: blur(15px);
}

.container-footer>ul {
  display: flex;
  /* flex-direction: column; */
  /* justify-content: space-between; */
  justify-content: center;
  gap: 2em;
  flex-wrap: wrap;
}

.container-history {
  /* margin-top: 5em; */
  /* padding: 4em 0; */
  /* height: 12em; */
  display: flex;
  flex-direction: column;
  gap: 3em;
}

.container-history>h2 {
  width: 100%;
}

.btn-about {
  font-size: 1.25em;
  background-color: var(--color-a);
  border: 4px solid var(--color-b);
  color: white;
  padding: 0.5em 1.5em;
  border-radius: 2em;
}

.img-about {
  /* width: 70%; */
  width: 9em;
  height: 200px;
  zoom: 150%;
  object-fit: cover;
  object-position: center;
  border: 1px solid var(--color-b);
  margin: 1em 1em;
  padding: 0.5em;
}

.container-skills {
  /* background: rgba(255, 255, 255, 0.2); */
  /* margin: 4em 0em; */
}

.skills {
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-content: space-around;
  gap: 2em;
  flex-wrap: wrap;
}

.skill {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.skill>p {
  font-weight: 500;
}

.about-icons {
  width: 100%;
  display: flex;
  justify-content: space-around;
  padding-left: 0px;
  margin: 3em 0;
}

.icon {
  margin-bottom: .25em;
  font-size: 4em;
}

.img-placeholder {
  width: 800px;
  height: 600px;
  background-color: rgb(73, 66, 66);
}

.img-project {
  display: block;
  width: 30em;
  width: 100%;
  height: 50%;
  box-shadow: 0px -8px 20px 5px var(--color-a);
}

.img-btns {
  display: flex;
  justify-content: space-between;
}

.img-desc {
  max-width: 960px;
}

.projects {
  display: flex;
  flex-direction: column;
}

body {
  margin: 0em 1em;
}

.project-title {
  background-color: var(--color-a);
  padding: 0.25em;
  text-align: left;
  padding-left: 0.65em;
  /* border-radius: 20px; */
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  box-shadow: var(--shadow);
}

.project-card {
  display: flex;
  flex-direction: column;
}

.project-stack {
  padding: 0.5em;
  padding-right: 1em;
  width: fit-content;
  font-size: 0.8em;
  background-color: var(--color-a);
  border-radius: 100px;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  /* box-shadow: var(--shadow); */
}

.history-btns {
  display: flex;
  /* width: 50em; */
  justify-content: center;
  gap: 0.2em;
}

.history-btn {
  font-size: 1.3em;
  padding: 0.25em;
  width: 10em;
  border: 2px solid var(--color-b);
  color: white;
  /* border-radius: 40px; */
  background-color: var(--color-a);
}

.history-btn-close {
  font-size: 1.75em;
  rotate: 180deg;
  transform: translateY(0.4em);
  opacity: 30%;
  color: white;
}

.history-text {
  width: fit-content;
  padding: 1em;
  /* margin: 0em; */
  border-radius: 1em;
  background-color: var(--color-a);
}

.history-content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.navbar {
  position: relative;
  z-index: 13;
}

.nav-btn {
  /* padding-left: 0.5em; */
}

.nav-top {
  /* opacity: 0; */
  /* background-color: var(--color-b); */
  /* background-color: rgba(255, 255, 255, 0.9); */
  /* background-color: rgba(255, 255, 255, 0.5); */
  /* background-color: rgba(255, 255, 255, 0.2); */
  position: fixed;
  top: 1em;
  left: 1em;
  /* width: 100%; */
  /* gap: 6em; */
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-around;
  align-items: center;
}

.nav-title {
  display: none;
}

.nav-li {
  position: fixed;
  left: 0;
  top: 4em;
  width: 70%;
  height: 100%;
  /* background-color: var(--color-b); */
  /* background-color: rgba(255, 255, 255, 0.9); */
  /* background-color: rgba(255, 255, 255, 0.5); */
  /* background-color: rgba(255, 255, 255, 0.2); */
  /* box-shadow: 0px -8px 20px 5px var(--color-b); */
  transition: transform 120ms ease;
  transform: translateX(-200%);
}

.nav-li>li {
  padding: 1.5em 0em;
}

.nav-li.active {
  transform: translateX(0%);
}

.container-projects {
  margin: 4em 0;
  margin-bottom: 0;
  display: flex;
  flex-direction: column;
  gap: 2em;
  /* padding-top: 4em; */
  /* background: rgba(255, 255, 255, 0.2); */
  /* background-color: red; */
  /* background-color: rgba(255, 255, 255, 0.9); */
  /* background-color: rgba(255, 255, 255, 0.5); */
  /* background-color: rgba(255, 255, 255, 0.2); */
}

.section-title {
  padding: 1em 0;
  width: 100%;
}

.container-history {
  padding-top: 8em;
}

.container-about {
  padding-top: 8em;
}

.msg {
  display: none;
  transition: transform 120ms ease,
    opacity 120ms ease;
  position: absolute;
  transform: translateY(11.5em);
  background-color: var(--color-b);
  padding: 0.5em 1.5em;
  border-radius: 100px;
}

.hide {
  opacity: 0;
}

.show {
  opacity: 100;
}

.project-desc {
  border-bottom-right-radius: 20px;
  padding: 0.5em 1em;
  margin-top: 0;
  background-color: var(--color-a);
}

.overlay {
  transition: opacity 0.6s ease;
  opacity: 0;
}

.blur {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background: rgba(255, 255, 255, 0.2);
  backdrop-filter: blur(15px);
  -webkit-backdrop-filter: blur(15px);
  pointer-events: none;
  z-index: 1;
  opacity: 1;
}

@media (min-width: 1400px) {
  #root {
    max-width: 2000px;
    margin: 0 auto;
  }

  .blur {
    height: 0px;
    width: 0px;
  }

  .nav-title {
    display: block;
  }

  .skills {
    display: flex;
  }

  .msg {
    display: block;
  }

  .clickable:hover {
    cursor: pointer;
    color: var(--color-b);
  }

  .container-btn {
    flex-direction: row;
  }

  .content-about {
    margin-top: 2em;
    max-width: 25em;
  }

  .history-text {
    max-width: 50%;
  }

  .history-btn-close {
    cursor: pointer;
  }

  .history-btn-close:hover {
    opacity: 100%;
  }

  .history-btn:hover,
  .btn-about:hover {
    background-color: var(--color-b);
  }

  .projects {
    /* margin: 2em 4em; */
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 2em;
  }

  .project-text {
    flex-direction: column;
    align-items: start;
    max-width: 30em;
  }

  .project-desc {
    /* padding-left: 2em; */
    /* border-left: 10px solid var(--color-b); */
    /* background-color: rgba(255, 255, 255, 0.9); */
    /* background-color: rgba(255, 255, 255, 0.5); */
    /* background-color: rgba(255, 255, 255, 0.2); */

  }

  .navbar {
    /* background-color: var(--color-a); */
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    /* width: 100%; */
  }

  .nav-btn {
    /* padding-left: 0.5em; */
    display: none;
  }

  .nav-top {
    /* opacity: 0; */
    /* background: var(--color-a); */
    position: relative;
    top: 0;
    left: 0;
    /* width: 100%; */
    width: fit-content;
    /* gap: 6em; */
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 0;
    margin: 0;
    align-items: center;
  }

  .nav-li {
    position: relative;
    display: flex;
    /* left: auto; */
    top: 0;
    /* right: 10%; */
    /* left: 100%; */
    width: fit-content;
    /* right: 0; */
    /* left: 20%; */
    /* width: 70%; */
    /* height: 100%; */
    gap: 3em;
    background: none;
    transform: translateX(0%);
    transition: transform 120ms ease;
  }

  .nav-li>li {
    padding: 0.5em 2em;
    border: 3px solid var(--color-b);
    border-radius: 30px;
    cursor: pointer;
  }

  .nav-li>li:hover {
    background-color: var(--color-b);
  }

  .nav>li:hover {}

  .nav-li.active {
    transform: translateX(0%);
  }

  .container-projects {
    padding-top: 0em;
  }

  .container-history {
    padding-top: 0em;
  }

  .container-about {
    padding-top: 0em;
  }
}

@media (min-width: 770px) {
  :root {
    /* font-size: 2em; */
  }

  .container-footer>ul {
    justify-content: space-between;
    flex-direction: row;
  }

  body {
    margin: 0em 5%;
  }

  .container-projects {
    /* margin: 4em 0em; */
  }

  .img-project {
    max-width: 30em;
    height: 20em;
    cursor: pointer;
    transition:
      transform 200ms ease-in,
      box-shadow 200ms ease-in;
  }

  .img-hero {
    position: absolute;
    z-index: -1;
  }

  .section {
    /* transform: translateY(4em); */
    /* background-color: var(--color-b); */
    border-radius: 30px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    padding: 2em;
  }

  .img-project:hover {
    transform: translateY(-0.25em);
    box-shadow: 0px -8px 10px 5px var(--color-a);
  }
}

